--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A theme for JSON Resume.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "eslint *.js",
     "start": "resume serve"
   },
   "dependencies": {
@@ -26,5 +26,11 @@
   "bugs": {
     "url": "https://github.com/xwartz/jsonresume-theme-resu/issues"
   },
-  "homepage": "https://github.com/xwartz/jsonresume-theme-resu#readme"
+  "homepage": "https://github.com/xwartz/jsonresume-theme-resu#readme",
+  "devDependencies": {
+    "eslint": "^3.5.0",
+    "eslint-config-standard": "^6.0.0",
+    "eslint-plugin-promise": "^2.0.1",
+    "eslint-plugin-standard": "^2.0.0"
+  }
 }
